# bot_ws

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  requirements_xfeat_lightglue.in  third_party.repos
.devcontainer/: devcontainer.json
demo_files/: map_1774706166.pgm  map_1774706166.yaml
notebooks/: lidar_measurement_model.ipynb  ua_diff_drive_model.ipynb
rosdep/: base.yaml
scripts/: bootstrap_workspace_venvs.sh  fetch_third_party.sh  first_run_workspace_setup.sh
src/bot_bringup/: package.xml
src/bot_bringup/launch/: headless_container.launch.py  headless_nav_bringup.launch.py  main_bringup.launch.py  main_bringup_new.launch.py  no_gui_bringup.launch.py  rviz_host.launch.py  sim_bringup.launch.py  vision_container.launch.py  vision_host.launch.py
src/bot_controller/: CMakeLists.txt  package.xml
src/bot_controller/config/: diff_drive_controller_config.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  ua_wheel_odom.yaml  ua_wheel_odom_bad.yaml  wheel_odometry_parametric.yaml  wheel_odometry_parametric_bad.yaml
src/bot_controller/include/bot_controller/: twist_relay.hpp  ua_wheel_odom.hpp  wheel_odometry_parametric.hpp
src/bot_controller/launch/: controller.launch.py  joystick_teleop.launch.py  twist_mux_relay.launch.py
src/bot_controller/src/: twist_relay.cpp  ua_wheel_odom.cpp  wheel_odometry_parametric.cpp
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/launch/: display.launch.py  gazebo.launch.py  gazebo_new.launch.py  headless_gazebo.launch.py
src/bot_description/meshes/: cam_link.STL
src/bot_description/rviz/: display.rviz  nav2_default_view.rviz  ua_viz.rviz
src/bot_description/urdf/: bot.urdf.xacro  can.xacro  common_properties.xacro  imu.xacro  imu_gazebo.xacro  left_camera.xacro  left_camera_gazebo.xacro  lidar.xacro  lidar_gazebo.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  mobile_base_ros2_control.xacro  right_camera.xacro  right_camera_gazebo.xacro
src/bot_dugma/: CMakeLists.txt  package.xml
src/bot_dugma/include/bot_dugma/: dugma_registrar.hpp  e_step.hpp  initialize.hpp  lrbfgs_wrapper.hpp  m_step.hpp  normalize.hpp  types.hpp  uncertainty_estimator.hpp
src/bot_dugma/m_step_opt/: R_to_q_derivative.py  basis_exponents.json  derive_energy_q.py  derive_pairwise_energy_term.py  g_all_cse_cpp.txt  g_cpp_preview.txt  g_cse_cpp_preview.txt  g_pair_coeffs_generated.inl  generate_B_inl.py  generate_G_K_tile_inl.py  view.txt
src/bot_dugma/src/: cuda_utils.cu  cuda_utils.hpp  dugma_registrar.cpp  e_step.cpp  e_step_cuda.cu  e_step_cuda.hpp  initialize.cpp  initialize_cuda.cu  initialize_cuda.hpp  lrbfgs_wrapper.cpp  m_step.cpp  normalize.cpp  types.cpp  uncertainty_estimator.cpp  uncertainty_estimator_cuda.cu  uncertainty_estimator_cuda.hpp
src/bot_evaluation/: CMakeLists.txt  package.xml
src/bot_evaluation/include/bot_evaluation/: gz_truth.hpp  odom_error.hpp
src/bot_evaluation/src/: odom_error.cpp
src/bot_interfaces/: CMakeLists.txt  package.xml
src/bot_interfaces/action/: MLERelativePose.action
src/bot_interfaces/msg/: MatchedViewPair.msg  Point2d.msg  PointWithCovariance.msg  PointWithCovarianceArray.msg  RelativePoseWithCovarianceStamped.msg
src/bot_interfaces/srv/: MatchedCorrespondences2d.srv
src/bot_localization/: CMakeLists.txt  package.xml
src/bot_localization/config/: amcl.yaml  ekf.yaml  odometry_ekf.yaml
src/bot_localization/include/bot_localization/: gtsam_pose_slam.hpp  odometry_ekf.hpp
src/bot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/bot_localization/src/: gtsam_pose_slam.cpp  imu_republisher.cpp  odometry_ekf.cpp
src/bot_mapping/: CMakeLists.txt  package.xml
src/bot_mapping/config/: slam_toolbox.yaml
src/bot_mapping/launch/: slam.launch.py
src/bot_multisensor_odometry/: CMakeLists.txt  package.xml
src/bot_multisensor_odometry/casadi/: generate_lidar_point_cloud.py
src/bot_multisensor_odometry/include/bot_multisensor_odometry/: casadi_helper.hpp  mle_relative_pose_client.hpp  mle_relative_pose_server.hpp  relative_pose_odometry.hpp  ua_lidar_point_cloud.hpp
src/bot_multisensor_odometry/src/: casadi_helper.cpp  mle_relative_pose_client.cpp  mle_relative_pose_server.cpp  relative_pose_odometry.cpp  ua_lidar_point_cloud.cpp
src/bot_navigation/: CMakeLists.txt  package.xml
src/bot_navigation/behavior_trees/: simple_nav.xml  simple_replanning_nav.xml  simple_replanning_recovery_nav.xml
src/bot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/bot_navigation/launch/: navigation.launch.py
src/bot_utils/: CMakeLists.txt  package.xml
src/bot_utils/include/bot_utils/: point_cloud_uncertainty_viz.hpp  safety_stop.hpp
src/bot_utils/src/: bot_trajectory.cpp  point_cloud_uncertainty_viz.cpp  safety_stop.cpp
src/bot_vision/: CMakeLists.txt  package.xml
src/bot_vision/casadi/: generate_triangulation_jacobians.py  sample.py
src/bot_vision/include/bot_vision/: camera_context.hpp  casADi_helper.hpp  correspondence.hpp  distortion_correction.hpp  feature_extraction.hpp  feature_tracks.hpp  multiview_policy.hpp  preprocessing.hpp  triangulation.hpp  vision_frontend.hpp
src/bot_vision/src/: camera_context.cpp  casADi_helper.cpp  correspondence.cpp  distortion_correction.cpp  feature_extraction.cpp  feature_tracks.cpp  matcher_probe_client.cpp  multiview_policy.cpp  preprocessing.cpp  triangulation.cpp  vision_frontend.cpp
src/bot_vision/symforce/: generate_equidistant.py  generate_plumb_bob.py  generate_rational_polynomial.py  generate_triangulation_jacobians.py
src/bot_vision_py/: package.xml  setup.cfg  setup.py
src/bot_vision_py/bot_vision_py/: xfeat_lightglue_server.py
src/bot_vision_py/launch/: xfeat_lightglue_server.launch.py
src/bot_worlds/: CMakeLists.txt  package.xml
src/bot_worlds/config/: empty.yaml  maze.yaml
src/bot_worlds/worlds/: empty.sdf  maze.sdf  maze.world.xacro
(+1 files in other folders)
