<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sandbox@todo.todo">sandbox</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bot_description</exec_depend>
  <exec_depend>bot_controller</exec_depend>
  <exec_depend>bot_localization</exec_depend>
  <exec_depend>bot_mapping</exec_depend>
  <exec_depend>bot_navigation</exec_depend>
  <exec_depend>bot_utils</exec_depend>
  <exec_depend>bot_worlds</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>bot_vision</exec_depend>
  <exec_depend>bot_multisensor_odometry</exec_depend>
  <exec_depend>ros2launch</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
