<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sandbox@todo.todo">sandbox</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>twist_mux_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>bot_interfaces</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
